--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,8 +1,8 @@
+.content {
+    padding: 10px;
+}
 .content img {
     width: 100%;
-    height: 200px;
+    height: 300px;
     object-fit: cover;
-}
-.content__profile {
-    padding:0 30px;
 }
