--- a/src/components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.css
@@ -5,9 +5,20 @@
     text-decoration: none;
     color: white;
 
+    display: flex;
+    align-items: center;
+    gap: 30px;
 }
 .dialog.active a{
     color: darkcyan;
     font-size: 28px;  
     margin-left: 80px;  
+}
+.dialog a img {
+    width: 60px;
+    border-radius: 50%;
+}
+.dialog a:hover {
+    color: rgb(80, 80, 188);
+    transition: color 0.3s ease
 }
