--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,6 +1,8 @@
 .nav {
     background-color: cornflowerblue;
     grid-area: nav;
+    display: flex;
+    flex-direction: column;
 }
 .nav ul li a {
     color: white;
@@ -14,4 +16,45 @@
 }
 .nav ul li a.activeLink {
     color: rgb(94, 16, 251);
+}
+
+.friends{
+    display: flex;
+    flex-direction: column;
+    margin-top: 40%;
+    margin-bottom: 50px;
+}
+.friendsTitle {
+    display: flex;
+    justify-content: center;
+    font-size: 32px;
+    margin: 20px 0;
+}
+.friendsItems {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.friendsItem {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 33.33333%;
+    align-items: center;
+}
+
+.friendsItem a {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
+    text-decoration: none;    
+}
+.friendsItem a img {
+    width: 75px;
+}
+.friendsItem a span {
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+    margin: 0 auto;
 }
