--- a/src/components/Nav/Friends/Friends.module.css
+++ b/src/components/Nav/Friends/Friends.module.css
@@ -16,30 +16,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 .friendsItem {
     display: flex;
-    flex-direction: column;
-    flex-basis: 33.33333%;
+    flex-direction: row;
+    flex-basis: 100%;
     align-items: center;
-}
-.friendsItem a {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    
-    text-decoration: none;    
-}
-.friendsItem a img {
-    width: 75px;
-}
-.friendsItem a span {
-    font-size: 18px;
-    font-weight: bold;
-    color: black;
-    margin: 0 auto;
-}
-.friendsItem a span:hover {
-    color: rgb(43, 47, 255);
-    transition: color 0.3s ease;
+    justify-content: space-around;
 }
