--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,27 @@
 .content__profile {
     padding:0 30px;
 }
+
+.content__backgroundPhoto img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.profileImg img {
+    width: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profileContacts {
+    display: flex;
+    flex-direction: column;
+}
+.profileContacts a {
+    color: #fff;
+    text-decoration: none;
+}
+.profileContacts a:hover {
+    text-decoration: underline;
+}
