--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,33 @@
 .header {
     background-color: darkslategrey;
     grid-area: header;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
 }
 .header img {
     width: 80px;
     padding: 5px 0 5px 25px;
+}
+
+.authBlock {
+    padding-right: 50px;
+}
+.authBlock a {
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: rgb(12, 115, 212);
+    border-radius: 20px;
+    color: white;
+    transition: background-color 0.3s ease;
+}
+.authBlock a:hover {
+    background-color: rgb(16, 140, 159);
+}
+.authBlock span {
+    color: white;
+    font-weight: 600;
+    border: 1px solid white;
+    padding: 10px;
 }
